--- a/level-1/index.html
+++ b/level-1/index.html
@@ -44,7 +44,9 @@
 
                     <header class="content-mid-header"></header>
 
-                    <div class="content"></div>
+                    <div class="content">
+                      "People often say that motivation doesn't last. Well, neither does bathing -- that's why we recommend it daily." <br /><span>-Zig Ziglar</span>
+                    </div>
 
                 </section>
 
